Add MacOS segment in Readme at the end